[package]
# name = "octocrab"
name = "octocrab_wasi"
version = "0.18.4"
authors = ["XAMPPRocky <xampprocky@gmail.com>", "jetjinser <cmdr.jv@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/jetjinser/octocrab"
repository = "https://github.com/jetjinser/octocrab.git"
description = "A modern, extensible GitHub API client with wasi support, forked from XAMPPRocky/octocrab."
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/octocrab_wasi"
categories = ["web-programming::http-client"]
keywords = ["github", "github-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-wasi"]

[dependencies]
reqwest = { version = "0.11.10", optional = true, default-features = false, features = ["json"] }
reqwest_wasi = { version = "0.11.10", optional = true, default-features = false, features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_path_to_error = "0.1.4"
async-trait = "0.1.50"
chrono = { version = "0.4.19", default-features = false, features = ["serde", "clock"] }
url = { version = "2.2.2", features = ["serde"] }
hyperx = "1.3.0"
snafu = { version = "0.7", features = ["backtraces"] }
once_cell = "1.7.2"
arc-swap = "1.3.0"
base64 = "0.20.0"
bytes = "1.0.1"
jwt-simple = "0.11.3"
futures-core = { version = "0.3.15", optional = true }
futures-util = { version = "0.3.15", optional = true }
secrecy = "0.8.0"
cfg-if = "1.0.0"
either = "1.8.0"

[dev-dependencies]
tokio = { version = "1.17.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
wiremock = "0.5.3"

[features]
default = ["native-tls", "reqwest"]
rustls = ["rustls-tls"]  # Leagcy support (<=0.17.0)

wasi = ["reqwest_wasi"]
no-pool = ["reqwest_wasi/no-pool"]

# Enables native-tls specific functionality not available by default.
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]

stream = ["futures-core", "futures-util", "reqwest/stream"]
